fix(NetworkInfo): increase gap between dot and title

--- a/src/styles/components/_network-info.scss
+++ b/src/styles/components/_network-info.scss
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
 
-    gap: 0.6rem;
+    gap: 0.8rem;
 
     width: max-content;
     padding: 0.8rem 1.2rem;
